--- a/viz/src/App.css
+++ b/viz/src/App.css
@@ -1,11 +1,8 @@
 .App {
   text-align: center;
-}
-
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
