--- a/viz/src/App.css
+++ b/viz/src/App.css
@@ -15,3 +15,17 @@
   color: #61dafb;
 }
 
+.FadeIn {
+  animation-duration: 1s;
+  animation-name: fadein;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
