--- a/viz/src/App.css
+++ b/viz/src/App.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   min-width: 100vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
